fixed icon bar cutoff shadows bug

--- a/css/largeScreen.css
+++ b/css/largeScreen.css
@@ -212,22 +212,24 @@
     width: 100%;
     margin: auto;
     margin-left: 43%;
-    overflow:visible;
+    
+
 }
 
 .iconBar .icon {
     width: 4%;
     margin-right: 1%;
     float: left;
+    margin-bottom: 20px;
 
     box-shadow: 0 0px 0px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 15px;   
+    border-radius: 15px;  
 
 }
 
 .iconBar .icon:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.4);
 }
 
 .iconBar .icon img {
